# tiktok-tech-jam

./: README.md  sample_features.csv
api/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
api/app/: main.py
api/app/auth/: user_id.py
api/app/clients/: chromadb_client.py  openai_client.py  supabase_client.py
api/app/config/: app_config.py  env_config.py
api/app/dtos/: check.py  check_dto.py  eval_result_dto.py  extraction_result.py  feature_dto.py  file_object_dto.py  reconcile_check_result_request.py  regulation_dto.py  rou_dto.py  system_prompt_dto.py  term_mapping_result.py  terminology_dto.py
api/app/routers/: auth_router.py  chat_router.py  feature_router.py  regulation_router.py  terminology_router.py
api/config/: local.yaml  production.yaml
api/migrations/: env.py
api/migrations/versions/: 2025_06_21_2145-736af655812f_create_user_profile_tbl.py  2025_08_18_2108-089d5b4084da_create_file_objects_tbl.py  2025_08_27_0937-898abe5f7816_create_rou_table.py  2025_08_28_2005-e0dceae80067_add_regulation_feature_check_and_chat_.py  2025_08_28_2159-8b99115994a9_fix_uuid.py  2025_08_29_1153-7af78a79935e_drop_checks_tbl.py  2025_08_29_1323-0631bf67b7b8_create_eval_results_tbl.py  2025_08_30_0918-accbc0c4562a_alter_checks_table_feature_id_col.py  2025_08_30_0932-487dfbd44219_cascade_feature_deletion.py  2025_08_30_1210-e9bffff46348_create_system_prompts_table.py  2025_08_30_1552-83c8bc13eed2_add_terminology_table.py  2025_08_30_1604-3928851b22ec_alter_check_tbl_add_type_col.py  2025_08_30_1844-dd60fb3ae7a9_merge_heads.py  (+3 more)
data/: terminology.csv
(+156 files in other folders)
